Added easy load and write utilities for gouldi